Reduce margin/padding to fix header on iOS

--- a/app/assets/stylesheets/nav/header.scss
+++ b/app/assets/stylesheets/nav/header.scss
@@ -72,10 +72,10 @@ header {
 
         li {
           float: left;
-          margin: 0 5px;
+          margin: 0 2px;
         }
 
-        a { padding: 8px; }
+        a { padding: 8px 6px; }
       }
     }
 
